--- a/index.html
+++ b/index.html
@@ -1,35 +1,141 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Saltovah.github.com by saltovah</title>
+<head>
+  <title>
+		Saltovskaya N.A. | 504 Polus
+	</title>
+	<style type="text/css">
+body
+{
+	width:800px;
+	font-family:Arial, Verdana, Sans-serif;
+	font-weight:normal;
+	color:#fff0f5;
+	background-color:#fff;
+	margin:0 auto;
+}
+a:link
+{
+	font-weight:bold;
+	text-decoration:none;
+	color:#f0f0f0;
+}
+a:active
+{
+	font-weight:bold;
+	text-decoration:underline;
+	color:#f0f0f0;
+}
+a:visited
+{
+	font-weight:bold;
+	text-decoration:none;
+	color:#f0f0f0;
+}
+a:hover
+{
+	font-weight:bold;
+	color:#f0f0f0;
+	text-decoration:none;
+}
+div.name
+{
+	height:60px;
+	width:550px;
+	background-color:#000;
+	background-repeat:repeat;
+	float:left;
+}
+div.polus
+{
+	height:60px;
+	width:250px;
+	background-color:#000;
+	background-repeat:repeat;
+	float:right;
+}
+div.facebook
+{
+	height:300px;
+	width:322px;
+	background-color:#000;
+	float:left;
+	border-left: 3px double #999999
+}
+div.pho
+{
+	height:300px;
+	width:225px;
+	background-color:#3807c4;
+	background-repeat:no-repeat;
+	float:left;
+}
+div.bpol
+{
+	height:300px;
+	width:247px;
+	background-color:#4c5866;
+	float:right;
+	border-right: 3px double #999999
+}
+div.menu
+{
+	
+	height:55px;
+	width:794px;
+	background-color:#000;
+	float:left;
+	border-left: 3px double #999999;
+	border-right: 3px double #999999
+}
+div.mainblock
+{
+	height:800px;
+	width:794px;
+	background-color:#1a4780;
+	border-left: 3px double #999999;
+	border-right: 3px double #999999;
+	float:both;
+}
+div.footer
+{	
+	height:40px;
+	width:794px;
+	background-color:#000;
+	border-left: 3px double #999999;
+	border-right: 3px double #999999
+}
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Saltovah.github.com</h1>
-        <p>Saltovah for Yandex</p>
-
-
-        <p class="view"><a href="https://github.com/saltovah">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <p><img src="http://cs303613.userapi.com/v303613132/220b/Q5_TW1xpL90.jpg" alt="right one"></p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+	</style>
+</head>
+	<body>
+		<div id="body">
+			<div align="center">
+				<div class="name">
+					<font>Name</font>
+				</div>
+				<div class="polus">
+					<font>polus</font>
+				</div>
+				<div class="facebook">
+					<font>facebook</font>
+				</div>
+				<div class="pho">
+					<font>pho</font>
+				</div>
+				<div class="bpol">
+					<font>bpol</font>
+				</div>
+				<div class="menu">
+					<font>menu</font>	
+				</div>
+				<div class="mainblock">
+					<font>mainblock</font>
+				</div>
+				<div class="footer">
+					<font>footer</font>
+				</div>
+			</div>	
+		</div>
+	</body>
 </html>
