--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ div.name
 	background-repeat:repeat;
 	float:left;
 }
-div.facebook
+div.socialpages
 {
 	height:300px;
 	width:100px;
@@ -105,7 +105,7 @@ div.footer
 					<font>Name</font>
 				</div>
 				
-				<div class="facebook">
+				<div class="socialpages">
 					<font>facebook</font>
 				</div>
 				<div class="pho">
