--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ div.footer
 				</div>
 				
 				<div class="socialpages">
-					<font>facebook</font>
+					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width:"90" height:"90">
 				</div>
 				<div class="pho">
 					<font>pho</font>
