--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ div.footer
 				
 				<div class="socialpages">
 					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width="90" height="90">
+					<img src="http://cs303613.userapi.com/v303613132/2219/pAvvIppdvMM.jpg" width="90" height="90">
+					<img src="http://cs303613.userapi.com/v303613132/2212/YBMveSRUk9A.jpg" width="90" height="90">
+					
 				</div>
 				<div class="pho">
 					<font>pho</font>
