--- a/index.html
+++ b/index.html
@@ -100,10 +100,15 @@ div.footer
 				</div>
 				
 				<div class="socialpages">
-					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width="90" height="90">
-					<img src="http://cs303613.userapi.com/v303613132/2219/pAvvIppdvMM.jpg" width="90" height="90" vspace="10">
-					<img src="http://cs303613.userapi.com/v303613132/2212/YBMveSRUk9A.jpg" width="90" height="90">
-					
+				<a href="http://vk.com/saltova">
+					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width="90" height="90" alt="VK Personal page">
+				</a>
+				<a href="http://https://twitter.com/saltovah">
+					<img src="http://cs303613.userapi.com/v303613132/2219/pAvvIppdvMM.jpg" width="90" height="90" vspace="10" alt="Twitter | Parental advisory explicit lyrics">
+				</a>
+				<a href="saltova.blogspot.com">
+					<img src="http://cs303613.userapi.com/v303613132/2212/YBMveSRUk9A.jpg" width="90" height="90" alt="Small but true :-)">
+				</a>	
 				</div>
 				<div class="pho">
 					<font>pho</font>
