--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@ div.footer
 				
 				<div class="socialpages">
 				<a href="http://vk.com/saltova">
-					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width="90" height="90" alt="VK Personal page">
+					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width="90" height="90" align="left">
 				</a>
 				<a href="https://twitter.com/saltovah">
-					<img src="http://cs303613.userapi.com/v303613132/2219/pAvvIppdvMM.jpg" width="90" height="90" vspace="5" alt="Twitter | Parental advisory explicit lyrics">
+					<img src="http://cs303613.userapi.com/v303613132/2219/pAvvIppdvMM.jpg" width="90" height="90" vspace="5" align="left">
 				</a>
 				<a href="http://saltova.blogspot.com/">
-					<img src="http://cs303613.userapi.com/v303613132/2212/YBMveSRUk9A.jpg" width="90" height="90" alt="Small but true :-)">
+					<img src="http://cs303613.userapi.com/v303613132/2212/YBMveSRUk9A.jpg" width="90" height="90" align="left">
 				</a>	
 				</div>
 				<div class="pho">
