--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ div.footer
 				</a>	
 				</div>
 				<div class="pho">
-					<font>pho</font>
+					<a href="http://www.google.com/">Google</a>
 				</div>
 				<div class="bpol">
 					<font>bpol</font>
