--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ div.footer
 				</a>	
 				</div>
 				<div class="pho">
-					<a href="http://www.google.com/">Google</a>
+					<img scr="http://cs303613.userapi.com/v303613132/2227/Y4EwcrCdAvQ.jpg"></img>
 				</div>
 				<div class="bpol">
 					<font>bpol</font>
