--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@ div.footer
 				
 				<div class="socialpages">
 				<a href="http://vk.com/saltova">
-					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width="90" height="90" align="left">
+					<img src="http://cs303613.userapi.com/v303613132/2220/P4oY_Ws61PI.jpg" width="90" height="90" align="left" />
 				</a>
 				<a href="https://twitter.com/saltovah">
-					<img src="http://cs303613.userapi.com/v303613132/2219/pAvvIppdvMM.jpg" width="90" height="90" vspace="10" align="left">
+					<img src="http://cs303613.userapi.com/v303613132/2219/pAvvIppdvMM.jpg" width="90" height="90" vspace="10" align="left" />
 				</a>
 				<a href="http://saltova.blogspot.com/">
-					<img src="http://cs303613.userapi.com/v303613132/2212/YBMveSRUk9A.jpg" width="90" height="90" align="left">
+					<img src="http://cs303613.userapi.com/v303613132/2212/YBMveSRUk9A.jpg" width="90" height="90" align="left" />
 				</a>	
 				</div>
 				<div class="pho">
-					<img scr="http://cs303613.userapi.com/v303613132/2227/Y4EwcrCdAvQ.jpg" height="290" width="225">
+					<img scr="http://cs303613.userapi.com/v303613132/2227/Y4EwcrCdAvQ.jpg" height="290" width="225" />
 				</div>
 				<div class="bpol">
 					<font>bpol</font>
