--- a/index.html
+++ b/index.html
@@ -113,9 +113,15 @@ div.footer
 				<div class="pho">
 					<img scr="http://cs303613.userapi.com/v303613132/222e/T-7wkum52j4.jpg" height="290" width="225" />
 				</div>
+				<!--
 				<div class="bpol">
 					<font>bpol</font>
 				</div>
+				-->
+				<div class="bpol">
+					<font>bpol</font>
+				</div>
+			
 				<div class="menu">
 					<font>menu</font>	
 				</div>
