--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ div.pho
 {
 	height:290px;
 	width:225px;
-	
+	background-color:#3807c4;
 	float:left;
 }
 div.bpol
 {
 	height:290px;
 	width:475px;
-	background-color:#4c5866;
+	background-image: url(http://cs303613.userapi.com/v303613132/222e/T-7wkum52j4.jpg);
 	float:right;
 }
 div.menu
