--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ div.footer
 				</a>	
 				</div>
 				<div class="pho">
-				
+				<img src="http://cs303613.userapi.com/v303613132/222e/T-7wkum52j4.jpg" alt="Альтернативный текст" width="225" height="290" />
 						</div>
 			
 				<div class="bpol">
