--- a/index.html
+++ b/index.html
@@ -113,7 +113,18 @@ div.footer
 						</div>
 			
 				<div class="bpol">
-					<font>bpol</font>
+					<font>
+						<p>
+						<strong>Обо мне</strong>
+						</p>
+						<p>
+						
+					
+						Студент МГТУ им. Н.Э. Баумана
+						Кафедра лазерного приборостроения и систем специального назначения.
+						Разработчик графических пользовательских интерфесов, MSP :-)
+						</p>
+					</font>
 				</div>
 			
 			
