--- a/index.html
+++ b/index.html
@@ -113,13 +113,12 @@ div.footer
 						</div>
 			
 				<div class="bpol">
-					<font>
+					<font align="left">
 						<p>
 						<strong>Обо мне</strong>
 						</p>
 						<p>
 						
-					
 						Студент МГТУ им. Н.Э. Баумана
 						Кафедра лазерного приборостроения и систем специального назначения.
 						Разработчик графических пользовательских интерфесов, MSP :-)
