--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ div.footer
 						</div>
 			
 				<div class="bpol">
-					<font align="left">
-						<p>
+					<font>
+						<p  align="left">
 						<strong>Обо мне</strong>
 						</p>
-						<p>
+						<p  align="left">
 						
 						Студент МГТУ им. Н.Э. Баумана
 						Кафедра лазерного приборостроения и систем специального назначения.
