--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>
 		Saltovah
 	</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
 	<style type="text/css">
 body
 {
