--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ body
 	font-family:Arial, Verdana, Sans-serif;
 	font-weight:normal;
 	color:#fff0f5;
-	background-color:#fff;
+	background-image:url(http://cs303613.userapi.com/v303613132/2245/C48sAbKbmTA.jpg);
+	background-repeat:repeat;
 	margin:0 auto;
 }
 a:link
