--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ div.name
 {
 	height:60px;
 	width:800px;
-	background-color:#000;
+	background-color:#3b3d59;
 	background-repeat:repeat;
 	float:left;
 }
@@ -87,7 +87,7 @@ div.footer
 {	
 	height:40px;
 	width:800px;
-	background-color:#000;
+	background-color:#3b3d59;
 }
 
 	</style>
