--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body
 	background-image:url(http://cs303613.userapi.com/v303613132/225f/TYE6UR8wExQ.jpg);
 	background-repeat:repeat;
 	margin:0 auto;
+	padding:10;
 }
 a:link
 {
