--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body
 	font-family:Arial, Verdana, Sans-serif;
 	font-weight:normal;
 	color:#fff0f5;
-	background-image:url(http://cs303613.userapi.com/v303613132/225f/TYE6UR8wExQ.jpg);
+	background-color:#3b3d59; 
 	background-repeat:repeat;
 	margin:0 auto;
 }
@@ -95,11 +95,11 @@ div.footer
 	<body>
 		<div id="body">
 			<div align="center">
-			<!--	
+				
 				<div class="name">
 					<font>Name</font>
 				</div>
-			-->	
+				
 				<div class="socialpages">
 				<a href="http://vk.com/saltova">
 					<img src="http://cs303613.userapi.com/v303613132/227b/qDlKo3GFTlU.jpg" width="90" height="90" align="left" />
