--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ div.footer
 			<div align="center">
 				
 				<div class="name">
-					<font>Name</font>
+					<font></font>
 				</div>
 				
 				<div class="socialpages">
@@ -113,10 +113,10 @@ div.footer
 				</div>
 				<div class="pho">
 				<img src="http://cs303613.userapi.com/v303613132/223c/utb_4gPUbFY.jpg" alt="Альтернативный текст" width="225" height="290" />
-						</div>
+				</div>
 			
 				<div class="bpol">
-					<font>
+					<font style="font-size:9px">
 						<p  align="left">
 						<strong>Обо мне</strong>
 						</p>
