--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ div.footer
 				<div class="bpol">
 					<font style="font-size:20px">
 						<p  align="left">
-						<strong>Обо мне</strong>
+						<h1>Обо мне</h1>
 						</p>
 						<p  align="left">
 						
