--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ div.footer
 				<div class="bpol">
 					<font style="font-size:20px">
 						<p  align="left">
-						<h1>Обо мне</h1>
+						<font style="font-size:40px">Обо мне</font>
 						</p>
 						<p  align="left">
 						
