--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ div.menu
 	
 	height:55px;
 	width:800px;
-	background-color:#000;
+	background-color:#3b3d59;
 	float:left;
 }
 div.mainblock
@@ -122,7 +122,7 @@ div.footer
 						
 						<p  align="left">
 						
-						Студент МГТУ им. Н.Э. Баумана
+						Студент МГТУ им. Н.Э. Баумана,
 						Кафедра лазерного приборостроения и систем специального назначения.
 						Разработчик графических пользовательских интерфесов, MSP :-)
 						</p>
@@ -131,7 +131,10 @@ div.footer
 			
 			
 				<div class="menu">
-					<font>menu</font>	
+					<p>
+					<font style="font-size=30px">menu1</font>
+					<font style="font-size=30px">menu2</font>
+					</p>
 				</div>
 				<div class="mainblock">
 					<font>mainblock</font>
