--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ div.footer
 						<p  align="left">
 						
 						Студент МГТУ им. Н.Э. Баумана,
-						Кафедра лазерного приборостроения и систем специального назначения.
+						Кафедра лазерного и оптикоэлектронного приборостроения и систем специального назначения.
 						Разработчик графических пользовательских интерфесов, MSP :-)
 						</p>
 					</font>
