--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@ div.footer
 			
 				<div class="menu">
 					<p>
-					<font style="font-size=40px">menu1</font>
-					<font style="font-size=40px">menu2</font>
+					<font style="font-size:40px">Вопросы Яндекса:</font>
+					<font style="font-size:40px">menu1</font>
+					<font style="font-size:40px">menu2</font>
 					</p>
 				</div>
 				<div class="mainblock">
