--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ div.footer
 			
 			
 				<div class="menu">
-					<p>
-					<font style="font-size:40px" align="left">Вопросы Яндекса:</font>
+					<p  align="left">
+					<font style="font-size:40px">Вопросы Яндекса:</font>
 					<font style="font-size:40px">menu1</font>
 					<font style="font-size:40px">menu2</font>
 					</p>
