--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ div.footer
 				<div class="menu">
 					<p  align="left">
 					<font style="font-size:40px">Вопросы Яндекса:</font>
-					<font style="font-size:40px">menu1</font>
-					<font style="font-size:40px">menu2</font>
+					<font style="font-size:40px">Общие</font>
+					<font style="font-size:40px">Разработка</font>
 					</p>
 				</div>
 				<div class="mainblock">
