--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ div.footer
 				<div class="menu">
 					<p  align="left">
 					<font style="font-size:40px">Вопросы Яндекса:</font>
-					<ul class="css-menu-1">
-					<li><a href="#">Общие</a></li>
-					<li><a href="#">Разработка</a></li>
+					
+					<font style="font-size:40px">Общие</font>
+					<font style="font-size:40px">Разработка</font>
 					
 					</p>
 				</div>
