--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@ div.footer
 					
 				
 						<font style="font-size:40px">Вопросы Яндекса:</font>
-					<ul class="css-menu-1">
-						<li><a href="#">Общие</a></li>
-						<li><a href="#">Разработка</a></li>
-					</ul>
+						<font style="font-size:40px">Общие</font>
+						<font style="font-size:40px">Разработка</font>
 					</p>
 				</div>
 				<div class="mainblock">
