--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ div.footer
 						<p  align="left">
 						
 						Студент МГТУ им. Н.Э. Баумана,
-						Кафедра лазерного и оптико электронного приборостроения и систем специального назначения.
-						Разработчик графических пользовательских интерфесов, MSP :-)
+						специальность: лазерного и оптико электронного приборостроения и систем специального назначения.
+						Разработчик графических пользовательских интерфесов, кафедра РЛ-2, MSP :-)
 						</p>
 					</font>
 				</div>
