--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ div.footer
 						
 						Студент МГТУ им. Н.Э. Баумана,
 						специальность: лазерного и оптико электронного приборостроения и систем специального назначения.
-						Разработчик графических пользовательских интерфесов, кафедра РЛ-2, MSP :-)
+						Разработчик графических пользовательских интерфейсов, кафедра РЛ-2, MSP :-)
 						</p>
 					</font>
 				</div>
