--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ div.bpol
 {
 	height:290px;
 	width:465px;
-	background-color:#595480;
+	background-image:url(http://cs303613.userapi.com/v303613132/22a9/4e8wxyq_vsg.jpg);
 	float:right;
 }
 div.menu
