--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ div.footer
 			
 				<div class="bpol">
 					<font style="font-size:20px">
-						
+						<font align="left">Серёжа Салтовский</font>
 						<p align="left"><font style="font-size:55px" align="left">Обо мне</font></p>
 						
 						<p  align="left">
