--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ div.footer
 				<img src="http://cs303613.userapi.com/v303613132/223c/utb_4gPUbFY.jpg" alt="Альтернативный текст" width="225" height="290" />
 				</div>
 			
-				<div class="bpol">
+				<div class="bpol" align="left">
 					<font style="font-size:20px">
-						<font align="left">Серёжа Салтовский</font>
+						<font  style="font-size:55px">Серёжа Салтовский</font>
 						<p align="left"><font style="font-size:55px" align="left">Обо мне</font></p>
 						
 						<p  align="left">
