--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-$(".block").toggle(function() {
-    $(this).animate({ backgroundColor: "black" }, 1000);
-},function() {
-    $(this).animate({ backgroundColor: "#68BFEF" }, 500);
-});
+
 
 <!doctype html>
 <html>
@@ -66,7 +62,7 @@ a:hover
 }
  .block { 
     color: white;
-    background-color: #68BFEF;
+    background-color: #685;
     width: 150px; 
     height: 70px;
     margin: 10px; 
