--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ div.bpol
 {
 	height:290px;
 	width:465px;
-	background-image:url(http://cs303613.userapi.com/v303613132/22a9/4e8wxyq_vsg.jpg);
+	background-color:#000;
 	float:right;
 }
 div.menu
