--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body
 	font-family:Arial, Tahoma, Verdana;
 	font-weight:normal;
 	color:#fff0f5;
-	background-image:url(http://cs303613.userapi.com/v303613132/228c/2_4z4JuafPY.jpg);
+	background-color:#000;
 	background-color:#3b3d59;
 	background-repeat:repeat;
 	margin:0 auto;
