--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ div.name
 div.socialpages
 {
 	height:290px;
-	width:100px;
+	width:90px;
 	background-color:#3b3d59;
 	float:left;
 }
@@ -103,7 +103,7 @@ div.footer
 					<font></font>
 				</div>
 				
-				<div class="socialpages">
+				<div margin-right="right" class="socialpages">
 				<a href="http://vk.com/saltova">
 					<img src="http://cs303613.userapi.com/v303613132/227b/qDlKo3GFTlU.jpg" width="90" height="90" align="left" />
 				</a>
