--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body
 	width:800px;
 	font-family:Arial, Tahoma, Verdana;
 	font-weight:normal;
+	
 	background-color:#000000;
 	background-repeat:repeat;
 	margin:0 auto;
@@ -103,7 +104,7 @@ div.footer
 					<font></font>
 				</div>
 				
-				<div margin-right="right" class="socialpages">
+				<div class="socialpages">
 				<a href="http://vk.com/saltova">
 					<img src="http://cs303613.userapi.com/v303613132/227b/qDlKo3GFTlU.jpg" width="90" height="90" align="left" />
 				</a>
