--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div.name
 {
 	height:60px;
 	width:800px;
-	background-color:#000;
+	background-image:url(http://cs303613.userapi.com/v303613132/228c/2_4z4JuafPY.jpg);
 	background-repeat:repeat;
 	float:left;
 }
