--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 body
 {
 	width:800px;
-	font-family:Arial, Tahoma, Verdana;
+	font-family:Arial, Tahoma, Verdana, color:#fff;
 	font-weight:normal;
 	
 	background-image:url(http://cs303613.userapi.com/v303613132/228c/2_4z4JuafPY.jpg);
