--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 body
 {
 	width:800px;
-	font-family:Arial, Tahoma, Verdana, color:#fff;
+	font-family:Arial, Tahoma, Verdana;
 	font-weight:normal;
-	
+	color:#fff
 	background-image:url(http://cs303613.userapi.com/v303613132/228c/2_4z4JuafPY.jpg);
 	background-repeat:repeat;
 	margin:0 auto;
