--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body
 	width:800px;
 	font-family:Arial, Tahoma, Verdana;
 	font-weight:normal;
-	color:#fff
+	color:#fff;
 	background-image:url(http://cs303613.userapi.com/v303613132/228c/2_4z4JuafPY.jpg);
 	background-repeat:repeat;
 	margin:0 auto;
