--- a/index.html
+++ b/index.html
@@ -142,7 +142,16 @@ div.footer
 					</p>
 				</div>
 				<div class="mainblock">
-					<font>mainblock</font>
+					<table border="1">
+<tr>
+<td>ячейка 1, первый ряд</td>
+<td>ячейка 2, первый ряд</td>
+</tr>
+<tr>
+<td>ячейка 1, второй ряд</td>
+<td>ячейка 2, второй ряд</td>
+</tr>
+</table> 
 				</div>
 				
 			<!--	
