--- a/index.html
+++ b/index.html
@@ -144,49 +144,49 @@ div.footer
 				<div class="mainblock">
 					<table border="1">
 <tr>
-<td>Расскажите нам о вашем опыте разработки. Ничего не упускайте: это может быть как серьезный интерфейс, так и просто домашняя страничка.
+<td>-Расскажите нам о вашем опыте разработки. Ничего не упускайте: это может быть как серьезный интерфейс, так и просто домашняя страничка.
 Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>Начинал с проектировки множества сайтов на укозе и народе, самописных движков и страниц, интерфейсов приложений для школьных нужд. С началом учебы в университет первым проектом был заказной интерфейс "убийцы фейсбука" с уклоном на передвижения пользователя (проект закрылся по причине падения энтузиазма у команды), затем увлекся Metro-дизайном, разрабатывал концепты приложений и проектировал интернет-ресурсы в этом стиле. На данный момент проектирую интерфейс игры под Win8 для десктопа и метро-среды.</td>
+<td>-Начинал с проектировки множества сайтов на укозе и народе, самописных движков и страниц, интерфейсов приложений для школьных нужд. С началом учебы в университет первым проектом был заказной интерфейс "убийцы фейсбука" с уклоном на передвижения пользователя (проект закрылся по причине падения энтузиазма у команды), затем увлекся Metro-дизайном, разрабатывал концепты приложений и проектировал интернет-ресурсы в этом стиле. На данный момент проектирую интерфейс игры под Win8 для десктопа и метро-среды.</td>
 </tr>
 <tr>
-<td>Какие языки программирования, фреймворки и технологии вы использовали? Сложились ли у вас личные предпочтения?
-Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>PHP, JS, HTML, CSS, Markdown
+<td>-Какие языки программирования, фреймворки и технологии вы использовали? Сложились ли у вас личные предпочтения?
+</td>
+<td>-PHP, JS, HTML, CSS, Markdown
 предпочтений не сложилось</td>
 </tr>
 <tr>
-<td>Какие редакторы и среды разработки вы использовали? Чем обычно пользуетесь?
+<td>-Какие редакторы и среды разработки вы использовали? Чем обычно пользуетесь?
 Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>Sublime Text 2, Visual Studio 2010, MS Notepad =), github.
+<td>-Sublime Text 2, Visual Studio 2010, MS Notepad =), github.
 Обычно это Sublime.</td>
 </tr>
 <tr>
-<td>С какими ОС приходилось сталкиваться? Для каких целей вы их использовали?
-Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>Windows 98/XP/7/8 Mac OS X
+<td>-С какими ОС приходилось сталкиваться? Для каких целей вы их использовали?
+</td>
+<td>-Windows 98/XP/7/8 Mac OS X
 На виндовс всегда жил, Mac изучал, чтобы какие-нибудь приемы перенять в проектировке приложений. </td>
 </tr>
 <tr>
-<td>Приходилось ли вам пользоваться системами контроля версий? Если да, то какими? Какая из них вам нравится больше всего?	
+<td>-Приходилось ли вам пользоваться системами контроля версий? Если да, то какими? Какая из них вам нравится больше всего?	
 
-Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>Гитхаб</td>
+</td>
+<td>-Гитхаб</td>
 </tr>
 <tr>
-<td>Использовали ли вы системы постановки и ведения задач?
-Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>Нет</td>
+<td>-Использовали ли вы системы постановки и ведения задач?
+</td>
+<td->Нет</td>
 </tr>
 <tr>
-<td>Какие полезные для фронтенд-разработчика ресурсы вы используете и можете посоветовать?
-Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>Из ресурсов я посещаю Хабр и design.ru
+<td>-Какие полезные для фронтенд-разработчика ресурсы вы используете и можете посоветовать?
+</td>
+<td>-Из ресурсов я посещаю Хабр и design.ru
 Из книжек по интерфейсам посоветую Томаса Льюиса (привычки, сознание, внимание), Джефа Раскина, Алана Купера. </td>
 </tr>
 <tr>
-<td>Работали ли вы где-нибудь? Какие у вас были должностные обязанности? Есть ли опыт работы в команде?
-Подробнее: http://company.yandex.ru/job/vacancies/shri.xml</td>
-<td>Работал в Pepsi, в отделе расчетов- принимал и оформлял экспедиторов, работал на жуткой консольной программе, были мысли, как сделать из нее конфетку, но ресурсов таких не имел. Работал в нескольких стартапах, интереса ради, зарплатой был энтузиазм, отовсюду уходил из-за низкой зарплаты, сейчас занят в команде по разработке приложений под Win8, на данный момент работаю над нескольких приложений, т.к. (кто бы мог подумать?=) ) сильно обгоняю программистов.</td>
+<td>-Работали ли вы где-нибудь? Какие у вас были должностные обязанности? Есть ли опыт работы в команде?
+</td>
+<td>-Работал в Pepsi, в отделе расчетов- принимал и оформлял экспедиторов, работал на жуткой консольной программе, были мысли, как сделать из нее конфетку, но ресурсов таких не имел. Работал в нескольких стартапах, интереса ради, зарплатой был энтузиазм, отовсюду уходил из-за низкой зарплаты, сейчас занят в команде по разработке приложений под Win8, на данный момент работаю над нескольких приложений, т.к. (кто бы мог подумать?=) ) сильно обгоняю программистов.</td>
 </tr>
 <tr>
 <td>ячейка 1, второй ряд</td>
