--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ div.footer
 <tr>
 <td>-Работали ли вы где-нибудь? Какие у вас были должностные обязанности? Есть ли опыт работы в команде?
 </td>
-<td>-Работал в Pepsico Holdings, в отделе расчетов, был администратором группы по обработке счетов финансового департамента, работал на жуткой консольной программе, были мысли, как сделать из нее конфетку, но ресурсов таких не имел. Работал в нескольких стартапах, интереса ради, зарплатой был энтузиазм, отовсюду уходил из-за низкой зарплаты, сейчас занят в команде по разработке приложений под Win8, на данный момент работаю над нескольких приложений, т.к. (кто бы мог подумать?=) ) сильно обгоняю программистов.</td>
+<td>-Работал в Pepsico International, в отделе расчетов, был администратором группы по обработке счетов финансового департамента, работал на жуткой консольной программе, были мысли, как сделать из нее конфетку, но ресурсов таких не имел. Работал в нескольких стартапах, интереса ради, зарплатой был энтузиазм, отовсюду уходил из-за низкой зарплаты, сейчас занят в команде по разработке приложений под Win8, на данный момент работаю над нескольких приложений, т.к. (кто бы мог подумать?=) ) сильно обгоняю программистов.</td>
 </tr>
 
 </table> 
