--- a/index.html
+++ b/index.html
@@ -172,9 +172,12 @@ div.footer
 <td>-Гитхаб</td>
 </tr>
 <tr>
-<td>-Использовали ли вы системы постановки и ведения задач?
+<td>
+-Использовали ли вы системы постановки и ведения задач?
 </td>
-<td>-Нет</td>
+<td>
+-Нет
+</td>
 </tr>
 <tr>
 <td>-Какие полезные для фронтенд-разработчика ресурсы вы используете и можете посоветовать?
