--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ div.footer
 					</p>
 				</div>
 				<div class="mainblock">
-<table border="0">
+<table border="0" align="left" cellpadding="20">
 <tr width="300px">
 <td>-Расскажите нам о вашем опыте разработки. Ничего не упускайте: это может быть как серьезный интерфейс, так и просто домашняя страничка.
 </td>
