--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="Content-Language" content="ru">
 	<style type="text/css">
-		body
+	body
 {
 	min-width: 800px;
 	max-width: 4000px;
@@ -137,7 +137,7 @@ a: hover
 }
 .lp /* logo + phones */
 {
-	width: 70%;
+	width: 1200px;
 	height:70px;
 /*	background-color: #345; */
 	font-size: 50px;
@@ -206,7 +206,7 @@ a: hover
 }
 .st /* stomach with icon+text and photos */
 {
-	width: 70%;
+	width: 1200px;
 	height:1000px;
 	background-color: #FFEFDD;
 	/*
@@ -263,7 +263,7 @@ a: hover
 }
 .footer
 {
-	width: 70%;
+	width: 1200px;
 	height: 50px;
 	background-color: black;
 	position: relative;
