--- a/index.html
+++ b/index.html
@@ -340,9 +340,7 @@ a: hover
 При Вашей заинтересованности в приобретении самолета, компания "Джет-Флайт" готова оказать консультации и содействие в следующем:
 определение типа воздушного судна, максимально удовлетворяющего Вашим потребностям;
 расчет стоимости эксплуатации и поддержания технической годности самолета;
-содействие в приобретении ВС (организация технического аудита самолета, анализа технической документации самолета, а так же процедуры приемки самолета);
-организация летной эксплуатации самолета, начиная от его регистрации, организация технического обслуживания, подбор экипажа и т.д., включая оперативное управление и контроль эксплуатации ВС;
-предоставление резервного ВС в случае невозможности использования своего самолета по техническим или другим причинам.
+
 
 							</font>
 						</div>
@@ -360,7 +358,7 @@ Cрочный груз
 Остановилось производство, экстренно требуется гуманитарная помощь, невозможно обойтись без важной детали к промышленному оборудованию - в этих случаях мы в кратчайшие сроки организуем оптимальный самолет для доставки Вашего груза.
 Тяжеловесный и крупногабаритный груз
 
-Крупногабаритные, длинномерные, тяжеловесные грузы, особенно если нет времени везти по земле или по морю, всегда представляют проблемы для транспортировки. Грузовые отсеки самолетов, задействованных на регулярных рейсах, слишком малы и не дают такой возможности. Мы поможем Вам подобрать наиболее подходящий, экономичный и быстрый вариант его доставки.
+Крупногабаритные, длинномерные, тяжеловесные грузы, особенно если нет времени везти по земле или по морю, всегда представляют проблемы для транспортировки. 
 
 							</font>
 						</div>
