--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ a: hover
 				<div class="pre">
 					<div class="it">
 						<div class="i">
-							<img src="file:///D:/My%20Docs/Docs/Jetflight/Site/amolet2.png">
+							<img src="http://cs402730.userapi.com/v402730132/2aad/kBq6s-6JAPE.jpg">
 						</div>
 						<div class="t">
 							<h2>Аренда самолета, заказ самолета (VIP чартер).</h2>
@@ -332,7 +332,7 @@ a: hover
 
 					<div class="it">
 						<div class="i">
-							<img src="file:///D:/My%20Docs/Docs/Jetflight/Site/management2.png">
+							<img src="http://cs402730.userapi.com/v402730132/2acb/okyvomUYXGA.jpg">
 						</div>
 						<div class="t">
 							<h2>Менеджмент воздушных судов</h2>
@@ -347,7 +347,7 @@ a: hover
 					</div>
 					<div class="it">
 						<div class="i">
-							<img src="file:///D:/My%20Docs/Docs/Jetflight/Site/cargo2.png">
+							<img src="http://cs402730.userapi.com/v402730132/2ab4/7Lyr8j0Q3Sk.jpg">
 						</div>
 						<div class="t">
 <h2>Грузовые авиаперевозки</h2>
