--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a: hover
 				/*
 				background: #eee;
 				*/
-				background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/menu.png);
+				background-image: url(http://cs402730.userapi.com/v402730132/2ad2/gxUFJoq6sUg.jpg);
 				height: 30px;
 				width: 1230px;
 				/*
@@ -108,7 +108,7 @@ a: hover
 
 				background: #333;
 				*/
-				background-image: url(file:///H:/GeneralCODE/menu.png);
+				background-image: url(http://cs402730.userapi.com/v402730132/2ad2/gxUFJoq6sUg.jpg);
 				box-shadow: 0 0 4px 2px #000;
 			}
 			#menu.black a 
@@ -121,7 +121,7 @@ a: hover
 				background: #555; 
 				/* border-bottom: 2px solid #444; */
 				
-				background-image: url(file:///H:/GeneralCODE/menuhover.png);
+				background-image: url(http://cs402730.userapi.com/v402730132/2ad9/BJOlm-DJqDY.jpg);
 				z-index: -1;
 			}
 
@@ -133,7 +133,7 @@ a: hover
 	font-size: 40px;
 	text-align: left;
 /*	background-color: #CC9966; */
-	background-image: url(file:///H:/GeneralCODE/footer.pngheader);	
+	background-image: url(http://cs402730.userapi.com/v402730132/2ac4/MI0qf0EbfHg.jpg);	
 }
 .lp /* logo + phones */
 {
@@ -165,7 +165,7 @@ a: hover
 	min-width: 1230px;
 	height: 30px;
 	background-color: #000;
-	background-image: url(file:///H:/GeneralCODE/menu.png);
+	background-image: url(http://cs402730.userapi.com/v402730132/2ad2/gxUFJoq6sUg.jpg);
 }
 .dm /* double menu is in the header! */
 {
@@ -271,7 +271,7 @@ a: hover
 	/* for radius in IE Use cc3pie or border-radius.htc */
 	border-bottom-right-radius: 15px;
 	border-bottom-left-radius: 15px;
-	background-image: url(file:///H:/GeneralCODE/footer.png);
+	background-image: url(http://cs402730.userapi.com/v402730132/2abb/lrTSNWjnamg.jpg);
 }
 
 	</style>
