--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@ a: hover
 							<font>
 При Вашей заинтересованности в приобретении самолета, компания "Джет-Флайт" готова оказать консультации и содействие в следующем:
 определение типа воздушного судна, максимально удовлетворяющего Вашим потребностям;
-расчет стоимости эксплуатации и поддержания технической годности самолета;
+расчет стоимости эксплуатации и поддержания технической годности самолета; 
+содействие в приобретении ВС (организация технического аудита самолета, анализа технической документации самолета, а так же процедуры приемки самолета);
 
 
 							</font>
