--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 	body
 {
-	min-width: 800px;
+	min-width: 1200px;
 	max-width: 4000px;
 	font-family: Arial, Verdana, Sans-serif;
 	font-weight: normal;
@@ -257,9 +257,10 @@ a: hover
 	height: 100%;
 	background-color: #FFEFDD;
 	text-align: left;
+	text-color: #4B2A17;
 	padding-left: 10px;
 	float: right;
-	border-left: 2px solid #000;
+	border-left: 2px solid #4B2A17;
 }
 .footer
 {
