--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ a: hover
 	height: 100%;
 	background-color: #FFEFDD;
 	text-align: left;
-	text-color: #4B2A17;
+	color: #4B2A17;
 	padding-left: 10px;
 	float: right;
 	border-left: 2px solid #4B2A17;
