--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ a: hover
 }
 .lp /* logo + phones */
 {
-	width: 1200px;
+	width: 70%;
 	height:70px;
 /*	background-color: #345; */
 	font-size: 50px;
