--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ a: hover
 .ph /* Pre-header with LOGO */
 {
 	min-width: 1200px;
+	max-width: 100%;
 	height: 70px;
 	font-size: 40px;
 	text-align: left;
@@ -137,7 +138,7 @@ a: hover
 }
 .lp /* logo + phones */
 {
-	width: 60%;
+	width: 70%;
 	height:70px;
 /*	background-color: #345; */
 	font-size: 50px;
