--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@ a: hover
 }
 .logo
 {
-	width: 400px;
+	width: 30%;
 	height: 70px;
 /*	background-color: #000; */
 	float: left;
 }
 .phone
 {
-	width: 800px;
+	width: 70%;
 	height: 70px;
 	float: right;
 	text-align: right;
