--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	body
 {
 	min-width: 1200px;
-	max-width: 4000px;
+	max-width: 100%;
 	font-family: Arial, Verdana, Sans-serif;
 	font-weight: normal;
 	font-size: 12;
