--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ a: hover
 }
 .menuh
 {
-	min-width: 1230px;
+	min-width: 70%;
 	height: 30px;
 	background-color: #000;
 	background-image: url(http://cs402730.userapi.com/v402730132/2ad2/gxUFJoq6sUg.jpg);
