--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ a: hover
 {
 	width: 70%;
 	height:70px;
-/*	background-color: #345; */
+	background-color: #345; 
 	font-size: 50px;
 	margin: 0 auto;
 }
@@ -148,7 +148,7 @@ a: hover
 {
 	width: 30%;
 	height: 70px;
-/*	background-color: #000; */
+	background-color: #123; 
 	float: left;
 }
 .phone
@@ -159,7 +159,7 @@ a: hover
 	text-align: right;
 	font-size: 20px;
 	line-height: 13px;
-/*	background-color: #456; */
+	background-color: #456; 
 }
 .menuh
 {
