--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a: hover
 .ph /* Pre-header with LOGO */
 {
 	min-width: 1200px;
-	max-width: 100%;
+	/* max-width: 100%; */
 	height: 70px;
 	font-size: 40px;
 	text-align: left;
@@ -138,7 +138,7 @@ a: hover
 }
 .lp /* logo + phones */
 {
-	width: 70%;
+	width: 1200px;
 	height:70px;
 	background-color: #345; 
 	font-size: 50px;
