--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@ a: hover
 }
 .logo
 {
-	width: 30%;
+	width: 400px;
 	height: 70px;
 	background-color: #123; 
 	float: left;
 }
 .phone
 {
-	width: 70%;
+	width: 800px;
 	height: 70px;
 	float: right;
 	text-align: right;
