--- a/index.html
+++ b/index.html
@@ -284,7 +284,10 @@ a: hover
 					<div class="logo">
 						<font>Jetflight</font>
 					</div>	
-								
+					<div class="phone">
+						<br>+7 (903) 345 5511</br>
+						<br>+7 (985) 472 4112</br>
+					</div>			
 				</div>
 
 			</div>
