--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ a: hover
 		<div class="menuh">
 			<ul id="menu" class="black">
 			<li><a href="#">О нас</a></li>
-			<li><a href="#">обслуживание</a></li>
+			<li><a href="#">Обслуживание</a></li>
 			<li><a href="#">Наши самолеты</a></li>
 			<li><a href="#">Менеджмент ВС</a></li>
 			<li><a href="#">Заказ самолета</a></li>
