--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ a: hover
 			
 				<div class="lp">
 					<div class="logo">
-						<a href="/Index"><font>Jetflight</font></a>
+						<font>Jetflight</font>
 					</div>	
 					<div class="phone">
 						<br>+7 (903) 345 5511</br>
