--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@ a: hover
 	text-align: right;
 	font-size: 20px;
 	line-height: 13px;
-	text-shadow: 0px 0px 3px #A59583;
-	color: #FFEFDD;
+/*	text-shadow: 0px 0px 3px #A59583; */
+/*	color: #FFEFDD; */
+	color: #000;
 /*	background-color: #456; */
 }
 .menuh
