--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ a: hover
 /*---------------------------------------------*/
 .ph /* Pre-header with LOGO */
 {
+	min-width: 1230px;
 	width: 100%;
 	height: 70px;
 	font-size: 40px;
@@ -138,6 +139,7 @@ a: hover
 }
 .lp /* logo + phones */
 {
+	min-width: 1230px;
 	width: 70%;
 	height:70px;
 /*	background-color: #345; */
@@ -183,6 +185,7 @@ a: hover
 }
 .header /* contains "dm" */
 {
+	min-width: 1230px;
 	width: 100%;
 	height: 40px;
 	background-color: #000;
@@ -192,6 +195,7 @@ a: hover
 {
 /*	max-width: ; */
 	width:100%;
+	min-width: 1230px;
 	/*--------AKHTUNG!!!!!!!!----------*/
 /* The pic of interier will be 3-size pic which is set up as zamostit' (like wallpaper on desktop) */
 	height:695px;
@@ -203,6 +207,7 @@ a: hover
 
 .op /* our planes */
 {
+	min-width: 1230px;
 	width: 70%;
 	height: 195px;
 	background-color: #654;
@@ -213,6 +218,7 @@ a: hover
 }
 .st /* stomach with icon+text and photos */
 {
+	min-width: 1230px;
 	width: 70%;
 	height:1100px;
 	background-color: #FFEFDD;
@@ -277,7 +283,8 @@ a: hover
 	border-left: 2px solid #000;
 }
 .footer
-{
+{	
+	min-width: 1230px;
 	width: 70%;
 	height: 50px;
 	background-color: black;
