--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ a: hover
 	height: 70px;
 	font-size: 40px;
 	text-align: left;
+	margin: 0 auto;
 /*	background-color: #CC9966; */
 	background-image: url(http://cs315424.userapi.com/v315424132/2de2/tYlZhBvHmEY.jpg);	
 }
