--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style type="text/css">
 body
 {
-	min-width: 800px;
+	min-width: 1150px;
 	max-width: 4000px;
 	font-family: Arial, Verdana, Sans-serif;
 	font-weight: normal;
@@ -61,7 +61,7 @@ a: hover
 				/*
 				background: #eee;
 				*/
-				background-image: url(http://cs315424.userapi.com/v315424132/2df0/Q_rzDyH0bwQ.jpg);
+				background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/menu.png);
 				height: 30px;
 				width: 1230px;
 				/*
@@ -94,7 +94,7 @@ a: hover
 				color: #999;
 				text-decoration: underline;
 				text-shadow: 0 0 60px #000;
-				background-image: url(http://cs315424.userapi.com/v315424132/2df7/3zqrbl3zYuA.jpg);
+				background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/menuhover.png);
 				
 			}
 			
@@ -109,7 +109,7 @@ a: hover
 
 				background: #333;
 				*/
-				background-image: url(http://cs315424.userapi.com/v315424132/2df0/Q_rzDyH0bwQ.jpg);
+				background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/menu.png);
 			/*	box-shadow: 0 0 4px 2px #000; */
 			}
 			#menu.black a 
@@ -122,25 +122,25 @@ a: hover
 				background: #555; 
 				/* border-bottom: 2px solid #444; */
 				
-				background-image: url(http://cs315424.userapi.com/v315424132/2df7/3zqrbl3zYuA.jpg);
+				background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/menuhover.png);
 				z-index: -1;
 			}
 
 /*---------------------------------------------*/
 .ph /* Pre-header with LOGO */
-{
-	min-width: 1230px;
-	width: 100%;
+{	
+	min-width: 1150px;
+	max-width: 100%;
 	height: 70px;
 	font-size: 40px;
 	text-align: left;
 /*	background-color: #CC9966; */
-	background-image: url(http://cs315424.userapi.com/v315424132/2de2/tYlZhBvHmEY.jpg);	
+	background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/header.png);	
 }
 .lp /* logo + phones */
 {
-	min-width: 1230px;
-	width: 70%;
+	min-width: 1150px;
+	max-width: 70%;
 	height:70px;
 /*	background-color: #345; */
 	font-size: 50px;
@@ -161,17 +161,16 @@ a: hover
 	text-align: right;
 	font-size: 20px;
 	line-height: 13px;
-/*	text-shadow: 0px 0px 3px #A59583; */
-/*	color: #FFEFDD; */
-	color: #000;
+	text-shadow: 0px 0px 3px #A59583;
+	color: #FFEFDD;
 /*	background-color: #456; */
 }
 .menuh
 {
-	min-width: 1230px;
+	min-width: 1150px;
 	height: 30px;
 	background-color: #000;
-	background-image: url(http://cs315424.userapi.com/v315424132/2df0/Q_rzDyH0bwQ.jpg);
+	background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/menu.png);
 }
 .dm /* double menu is in the header! */
 {
@@ -185,7 +184,6 @@ a: hover
 }
 .header /* contains "dm" */
 {
-	min-width: 1230px;
 	width: 100%;
 	height: 40px;
 	background-color: #000;
@@ -194,8 +192,8 @@ a: hover
 .bs /* beautifull stomach */
 {
 /*	max-width: ; */
-	width:100%;
-	min-width: 1230px;
+	min-width: 1150px;
+	max-width:100%;
 	/*--------AKHTUNG!!!!!!!!----------*/
 /* The pic of interier will be 3-size pic which is set up as zamostit' (like wallpaper on desktop) */
 	height:695px;
@@ -207,7 +205,6 @@ a: hover
 
 .op /* our planes */
 {
-	min-width: 1230px;
 	width: 70%;
 	height: 195px;
 	background-color: #654;
@@ -217,9 +214,9 @@ a: hover
 
 }
 .st /* stomach with icon+text and photos */
-{
-	min-width: 1230px;
-	width: 70%;
+{	
+	min-width: 1150px;
+	max-width: 70%;
 	height:1100px;
 	background-color: #FFEFDD;
 	/*
@@ -233,8 +230,9 @@ a: hover
 }
 /*----------------------------FAMILY----------------------*/
 .pre /* Presentation */
-{
-	width: 100%;
+{	
+	min-width: 1150px;
+	max-width: 100%;
 	height: 99%;
 	float: left;
 }
@@ -283,9 +281,9 @@ a: hover
 	border-left: 2px solid #000;
 }
 .footer
-{	
-	min-width: 1230px;
-	width: 70%;
+{
+	min-width: 1150px;
+	max-width: 70%;
 	height: 50px;
 	background-color: black;
 	/*
@@ -295,7 +293,7 @@ a: hover
 	/* for radius in IE Use cc3pie or border-radius.htc */
 	border-bottom-right-radius: 15px;
 	border-bottom-left-radius: 15px;
-	background-image: url(http://cs315424.userapi.com/v315424132/2dd9/lbx7vihI-oc.jpg);
+	background-image: url(file:///D:/My%20Docs/Docs/Jetflight/Site/footer.png);
 }
 
 </style>
