--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@ a: hover
 
 .op /* our planes */
 {
-	width: 70%;
+	min-width: 1150px;
+	max-width: 70%;
 	height: 195px;
 	background-color: #654;
 	position: relative; 
