--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ a: hover
 {	
 	min-width: 1150px;
 	max-width: 70%;
-	height:1100px;
+	height:850px;
 	background-color: #FFEFDD;
 	/*
 	border-top-right-radius: 20px;
@@ -263,6 +263,7 @@ a: hover
 	height: 100%;
 	background-color: #FFEFDD;
 	margin-left: 10px;
+	padding-bottom: 30px;
 	text-align: left;
 	font-size: 18px;
 	color: #4B2A17;
