--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ a: hover
 {	
 	min-width: 1150px;
 	max-width: 70%;
-	height:850px;
+	min-height:900px;
 	background-color: #FFEFDD;
 	/*
 	border-top-right-radius: 20px;
