--- a/index.html
+++ b/index.html
@@ -350,8 +350,62 @@ div.container-content
 </style>
 <div class="container">
 	<div class="container-content">
-	<img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png"><img src="file:///D:/Saltova%20shop/Docs/Workshop/Jetflight2/Site/amolet2.png">
-</div>
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+		<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+		<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+		<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+		<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+		<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+		<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	<img src="http://cs402730.vk.me/v402730132/2aad/kBq6s-6JAPE.jpg">
+	</div>
+	
 </div>	
 					</div>
 				
