--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ body
 	margin: 0 auto;
 	padding: 0;
 }
-div.container
+.container
 {
 	overflow-x:auto;
 	overflow-y:hidden;
 	height: 200px;
 	width: 100%;
 }
-div.container-content
+.container-content
 {
 	width:100000px;
 }
